src/objects/Feature_Release__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Release_Date__c</fullName>
        <label>Actual Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Emailed_Developers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emailed Developers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Release_Type__c</fullName>
        <label>Feature Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Release_Date__c</fullName>
        <label>Projected Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <description>Summary of all features included in release</description>
        <inlineHelpText>Summary of all features included in release</inlineHelpText>
        <label>Release Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <label>Release Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Feature Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release_Status__c</columns>
        <columns>Feature_Release_Type__c</columns>
        <columns>Projected_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deployed_Releases</fullName>
        <columns>NAME</columns>
        <columns>Release_Status__c</columns>
        <columns>Feature_Release_Type__c</columns>
        <columns>Projected_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <label>Deployed Releases</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Releases</fullName>
        <columns>NAME</columns>
        <columns>Release_Status__c</columns>
        <columns>Feature_Release_Type__c</columns>
        <columns>Projected_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled,In Progress</value>
        </filters>
        <label>Upcoming Releases</label>
    </listViews>
    <nameField>
        <label>Feature Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Release_Date_Required</fullName>
        <active>true</active>
        <description>when release is set to Deployed enforce a the actual release date.</description>
        <errorConditionFormula>ISPICKVAL(Release_Status__c, &quot;Deployed&quot;)  &amp;&amp;   ISBLANK(Actual_Release_Date__c)</errorConditionFormula>
        <errorDisplayField>Actual_Release_Date__c</errorDisplayField>
        <errorMessage>Please input an actual release Date when Release Status is set to &quot;Deployed&quot;</errorMessage>
    </validationRules>
</CustomObject>